# cord-concept

./: Cargo.toml
frame/transaction-payment/: Cargo.toml
frame/transaction-payment/src/: lib.rs~
node/: Cargo.toml
pallets/pallet-credential/: Cargo.toml
pallets/pallet-did/: Cargo.toml
pallets/pallet-did/src/: lib.rs
pallets/pallet-schema/: Cargo.toml
pallets/registrar/: Cargo.toml
pallets/registrar/src/: lib.rs
pallets/substrate-rbac/: Cargo.toml
pallets/substrate-validator-set/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
